<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task1"/>
            <Button
                android:id="@+id/btnFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task2"/>
            <Button
                android:id="@+id/btnCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task3"/>
            <Button
                android:id="@+id/btnRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task4"/>
            <Button
                android:id="@+id/btnListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task5"/>
            <Button
                android:id="@+id/btnRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task6"/>
            <Button
                android:id="@+id/btnHorizontalScroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task7"/>
            <Button
                android:id="@+id/btnVerticalScroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task8"/>
            <Button
                android:id="@+id/btnTimePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task9"/>

            <Button
                android:id="@+id/btnDatePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task10"/>
            <Button
                android:id="@+id/btnProgressView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task11"/>

            <Button
                android:id="@+id/btnTabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task12"/>
            <Button
                android:id="@+id/btnActionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task13"/>
            <Button
                android:id="@+id/btnToast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task14"/>
            <Button
                android:id="@+id/btnAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task15"/>
            <Button
                android:id="@+id/btnStartActivityForResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task16"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:textAlignment="center"
                android:text="24/11/2021"
                android:textColor="@color/lightOrange"
                android:textSize="18sp"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/btnRoomDb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task17"/>
            <Button
                android:id="@+id/btnSharedPreferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task18"/>
            <Button
                android:id="@+id/btnErrorHandling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task19"/>
            <Button
                android:id="@+id/btnWebView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task20"/>
            <Button
                android:id="@+id/btnImagePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task21"/>
            <Button
                android:id="@+id/btnVideoPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task22"/>
            <Button
                android:id="@+id/btnCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task23"/>
            <Button
                android:id="@+id/btnContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task24"/>
            <Button
                android:id="@+id/btnCustomContentProvider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task25"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:textAlignment="center"
                android:text="2/12/2021"
                android:textColor="@color/lightOrange"
                android:textSize="18sp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btnGoogleMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task27"/>
            <Button
                android:id="@+id/btnRuntimePermission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task26"/>
            <Button
                android:id="@+id/btnBackgroundService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task28"/>
            <Button
                android:id="@+id/btnFireBaseConnection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task29"/>
            <Button
                android:id="@+id/btnRetrofit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task30"/>
            <Button
                android:id="@+id/btnVolley"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task31"/>
            <Button
                android:id="@+id/btnChat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"
                android:text="@string/task33"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>